--- a/onlineshop/templates/onlineshop/add_bottle.html
+++ b/onlineshop/templates/onlineshop/add_bottle.html
@@ -5,10 +5,12 @@
     <meta name="keywords" content="Yeni Urun">
     <meta name="description" content="">
     <title>add_bottle</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="add_bottle.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+          {% load static %}
+
+    <link rel="stylesheet" href="{% static 'onlineshop/nicepage.css' %}" media="screen">
+<link rel="stylesheet" href="{% static 'onlineshop/add_bottle.css' %}" media="screen">
+    <script class="u-script" type="text/javascript" src="{% static 'onlineshop/jquery.js' %}" defer=""></script>
+    <script class="u-script" type="text/javascript" src="{% static 'onlineshop/nicepage.js' %}" defer=""></script>
     <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
     <meta name="referrer" content="origin">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -20,7 +22,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png"
+		"logo": "{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}"
 }</script>
     <meta name="theme-color" content="#1b356a">
     <meta property="og:title" content="add_bottle">
@@ -28,7 +30,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-cede"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
-          <img src="images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png" class="u-logo-image u-logo-image-1">
+          <img src="{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}" class="u-logo-image u-logo-image-1">
         </a>
         <h5 class="u-custom-font u-font-source-sans-pro u-text u-text-1">Meta Plastik</h5>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
@@ -65,7 +67,9 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Yeni Urun</h1>
         <div class="u-form u-form-1">
-          <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+          <form action="{% url 'onlineshop:create_bottle' %}"  style="padding: 10px"  name="form" method="post">
+                          {% csrf_token %}
+
             <div class="u-form-group u-form-name u-label-top">
               <label for="name-3b9a" class="u-label">Ürün kodu</label>
               <input type="text" placeholder="Bottle Code" id="name-3b9a" name="bottle_code" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1" required="">
@@ -168,7 +172,7 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d9e6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">BILGER</p>
         <p class="u-small-text u-text u-text-variant u-text-2">Iletisim </p>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png" alt="" data-image-width="1280" data-image-height="1280">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}" alt="" data-image-width="1280" data-image-height="1280">
         <p class="u-small-text u-text u-text-variant u-text-3">Numune Talebi</p>
         <p class="u-small-text u-text u-text-variant u-text-4">Calisma Saatleri</p>
         <p class="u-small-text u-text u-text-variant u-text-5">Iletisim </p>
