--- a/onlineshop/templates/onlineshop/Products.html
+++ b/onlineshop/templates/onlineshop/Products.html
@@ -5,13 +5,18 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>Products</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Products.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    {% load static %}
+
+    <link rel="stylesheet" href="{% static 'onlineshop/nicepage_products.css' %}" media="screen">
+     <link rel="stylesheet" href="{% static 'onlineshop/Products.css' %}" media="screen">
+    <script class="u-script" type="text/javascript" src="{% static 'onlineshop/jquery.js' %}" defer=""></script>
+    <script class="u-script" type="text/javascript" src="{% static 'onlineshop/nicepage_products.js' %}" defer=""></script>
+
     <meta name="generator" content="Nicepage 5.17.1, nicepage.com">
+    <meta name="referrer" content="origin">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i">
+    
     
     
     
@@ -25,70 +30,129 @@
     <meta property="og:title" content="Products">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-cede"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
-          <img src="images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png" class="u-logo-image u-logo-image-1">
-        </a>
-        <h5 class="u-custom-font u-font-source-sans-pro u-text u-text-1">Meta Plastik</h5>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
-          <div class="menu-collapse">
-            <a class="u-button-style u-nav-link" href="#">
-              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f6ec"></use></svg>
-              <svg class="u-svg-content" version="1.1" id="svg-f6ec" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-valign-bottom-lg u-valign-bottom-xl u-header" id="sec-cede" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
+        <img src="images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png" class="u-logo-image u-logo-image-1">
+      </a><h5 class="u-custom-font u-font-source-sans-pro u-text u-text-1">Meta Plastik</h5><nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
+        <div class="menu-collapse">
+          <a class="u-button-style u-nav-link" href="#">
+            <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-f6ec"></use></svg>
+            <svg class="u-svg-content" version="1.1" id="svg-f6ec" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
-            </a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">ANASAYFA</a>
+          </a>
+        </div>
+        <div class="u-custom-menu u-nav-container">
+          <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">ANASAYFA</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html">ÜRÜNLER</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">HAKKIMIZDA</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contacts.html">İLETİŞİM</a>
 </li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">ANASAYFA</a>
+        </div>
+        <div class="u-custom-menu u-nav-container-collapse">
+          <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            <div class="u-inner-container-layout u-sidenav-overflow">
+              <div class="u-menu-close"></div>
+              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">ANASAYFA</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html">ÜRÜNLER</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">HAKKIMIZDA</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contacts.html">İLETİŞİM</a>
 </li></ul>
-              </div>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav>
-      </div></header>
-    <section class="u-clearfix u-section-1" id="sec-5160">
+          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+        </div>
+      </nav><div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
+    <section class="u-clearfix u-section-1" id="sec-527d">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width u-list u-list-1">
+        <h3 class="u-align-center u-text u-text-1">Pet Siseler</h3>
+        <div class="u-border-3 u-border-palette-1-base u-container-style u-expanded-width u-group u-group-1">
+          <div class="u-container-layout u-container-layout-1">
+            <h5 class="u-text u-text-default u-text-2">Пример заголовка</h5>
+              <div class="u-form-group u-form-select u-label-none u-form-group-1">
+												  <ul class="nav">
+							<li>
+								<a href="#">Menu 1</a>
+								<ul>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Menu 2</a>
+								<ul>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Menu 3</a>
+								<ul>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+									<li><a href="#">Sub Menu Item</a></li>
+								</ul>
+							</li>
+						</ul>
+							</div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-5160">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
+
+                           {% for product in product_list %}
+
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img class="u-expanded-width u-image u-image-1" src="images/90fc53c9.svg" data-image-width="2000" data-image-height="1333">
+                <img class="u-image u-image-1" src="{% static 'onlineshop/images/90fc53c9.svg' %}" data-image-width="2000" data-image-height="1333">
                 <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-1">ASYA 100 - 100 ML</h5>
+                <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-opacity u-opacity-80 u-line-1"></div>
+                <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
               </div>
             </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
-                <img class="u-expanded-width u-image u-image-2" src="images/90fc53c9.svg" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-2">Пример заголовка</h5>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img class="u-expanded-width u-image u-image-3" src="images/90fc53c9.svg" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-3">Пример заголовка</h5>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-4">
-                <img class="u-expanded-width u-image u-image-4" src="images/90fc53c9.svg" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-4">Пример заголовка</h5>
-              </div>
-            </div>
+
+                            {% endfor %}
+
+
           </div>
+        </div>
+        <h6 class="u-text u-text-default u-text-5">Filtr</h6>
+        <div class="u-form u-form-1">
+          <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-8 u-form-vertical u-inner-form" style="padding: 8px;" source="email" name="form">
+            <div class="u-form-group u-form-select u-label-top u-form-group-1" >
+
+                <label  class="u-label">Выпадающий список</label>
+                 <div class="dropdown-custom" data-control="checkbox-dropdown">
+							<label class="dropdown-label-custom">Hacim</label>
+
+								<div class="dropdown-list-custom">
+
+									<label class="dropdown-option-custom">
+									<input type="checkbox" name="volume" value="1" />
+											1 ml
+										</label>
+
+
+									</div>
+						</div>
+            </div>
+
+
+
+              <div class="u-align-center u-form-group u-form-submit u-label-top">
+              <a href="#" class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a>
+              <input type="submit" value="submit" class="u-form-control-hidden">
+            </div>
+            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+            <input type="hidden" value="" name="recaptchaResponse">
+            <input type="hidden" name="formServices" value="cbf0d18d-5456-ae03-71f8-2d943f80830c">
+          </form>
         </div>
       </div>
     </section>
