--- a/onlineshop/static/onlineshop/add_bottle.css
+++ b/onlineshop/static/onlineshop/add_bottle.css
@@ -66,7 +66,7 @@
 }
 
 .u-section-1 .u-form-group-7 {
-  --progress: 0%;
+  margin-left: 0;
 }
 
 .u-section-1 .u-input-7 {
@@ -94,6 +94,14 @@
 }
 
 .u-section-1 .u-input-10 {
+  text-transform: uppercase;
+}
+
+.u-section-1 .u-form-group-11 {
+  --progress: 0%;
+}
+
+.u-section-1 .u-input-11 {
   text-transform: uppercase;
 }
 
