--- a/onlineshop/static/onlineshop/product_info.css
+++ b/onlineshop/static/onlineshop/product_info.css
@@ -1,11 +1,11 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 480px;
+  min-height: 585px;
 }
 
 .u-section-1 .u-image-1 {
   width: 384px;
   height: 400px;
-  margin: 40px auto 0 92px;
+  margin: 59px auto 0 92px;
 }
 
 .u-section-1 .u-text-1 {
@@ -45,12 +45,21 @@
 
 .u-section-1 .u-text-8 {
   font-weight: 400;
-  margin: 20px 201px 59px 551px;
+  margin: 20px 201px 0 551px;
+}
+
+.u-section-1 .u-text-9 {
+  font-weight: 400;
+  margin: 20px 201px 0 551px;
+}
+
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  margin: 35px 467px 60px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
-    margin-top: 20px;
     margin-right: 101px;
     margin-left: 451px;
   }
@@ -89,10 +98,20 @@
     margin-right: 102px;
     margin-left: 451px;
   }
+
+  .u-section-1 .u-text-9 {
+    margin-right: 101px;
+    margin-left: 451px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-right: 267px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
+    margin-top: 20px;
     margin-right: 0;
     margin-left: 332px;
   }
@@ -131,6 +150,15 @@
     margin-right: 1px;
     margin-left: 332px;
   }
+
+  .u-section-1 .u-text-9 {
+    margin-right: 0;
+    margin-left: 332px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-right: 47px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -165,11 +193,19 @@
   .u-section-1 .u-text-8 {
     margin-left: 152px;
   }
+
+  .u-section-1 .u-text-9 {
+    margin-left: 152px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 434px;
+    min-height: 539px;
   }
 
   .u-section-1 .u-image-1 {
@@ -214,6 +250,10 @@
 
   .u-section-1 .u-text-8 {
     margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-text-9 {
     margin-left: 0;
   }
 }
