--- a/onlineshop/templates/onlineshop/bottle_added.html
+++ b/onlineshop/templates/onlineshop/bottle_added.html
@@ -25,7 +25,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}"
+		"logo": "{% static 'onlineshop/images/logo.png' %}"
 }</script>
     <meta name="theme-color" content="#1b356a">
     <meta property="og:title" content="Thank You Page Template">
@@ -33,7 +33,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-cede"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
-          <img src="{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}" class="u-logo-image u-logo-image-1">
+          <img src="{% static 'onlineshop/images/logo.png' %}" class="u-logo-image u-logo-image-1">
         </a>
         <h5 class="u-custom-font u-font-source-sans-pro u-text u-text-1">Meta Plastik</h5>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
@@ -68,8 +68,13 @@
       </div></header>
     <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="sec-4011">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1"> Ürün Başarıyla Oluşturuldu!</h2>
+          {% if error_message %}
+          <font color="maroon"><h2 class="u-align-center u-text u-text-default u-text-1"> {{ error_message }}</h2></font>
+          {% else %}
+                  <h2 class="u-align-center u-text u-text-default u-text-1"> Ürün Başarıyla Oluşturuldu!</h2>
+          {% endif %}
           <a href="{% url 'onlineshop:add_bottle' %}"><p class="u-align-center u-text u-text-default u-text-2">Yeni Ürün Yaratmak</p></a>
+
       </div>
     </section>
     
@@ -78,7 +83,7 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d9e6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">BILGER</p>
         <p class="u-small-text u-text u-text-variant u-text-2">Iletisim </p>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}" alt="" data-image-width="1280" data-image-height="1280">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="{% static 'onlineshop/images/logo.png' %}" alt="" data-image-width="1280" data-image-height="1280">
         <p class="u-small-text u-text u-text-variant u-text-3">Numune Talebi</p>
         <p class="u-small-text u-text u-text-variant u-text-4">Calisma Saatleri</p>
         <p class="u-small-text u-text u-text-variant u-text-5">Iletisim </p>
