--- a/onlineshop/templates/onlineshop/error_page.html
+++ b/onlineshop/templates/onlineshop/error_page.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="ru"><head>
+<html style="font-size: 16px;" lang="ru">
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Thank you for your order">
     <meta name="description" content="">
-    <title>Products</title>
+    <title>Thank You Page Template</title>
+
     {% load static %}
 
     <link rel="stylesheet" href="{% static 'onlineshop/nicepage.css' %}" media="screen">
-     <link rel="stylesheet" href="{% static 'onlineshop/Products.css' %}" media="screen">
+<link rel="stylesheet" href="{% static 'onlineshop/thank_you.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'onlineshop/jquery.js' %}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{% static 'onlineshop/nicepage.js' %}" defer=""></script>
 
@@ -22,17 +25,15 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}"
+		"logo": "{% static 'onlineshop/images/logo.png' %}"
 }</script>
     <meta name="theme-color" content="#1b356a">
-    <meta property="og:title" content="Products">
+    <meta property="og:title" content="Thank You Page Template">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="ru">
-
-  <header class="u-clearfix u-header u-header" id="sec-cede"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <a href="{% url 'onlineshop:main_page' %}" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
-          <img src="{% static 'onlineshop/images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png' %}" class="u-logo-image u-logo-image-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-cede"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
+          <img src="{% static 'onlineshop/images/logo.png' %}" class="u-logo-image u-logo-image-1">
         </a>
         <h5 class="u-custom-font u-font-source-sans-pro u-text u-text-1">Meta Plastik</h5>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
@@ -65,37 +66,10 @@
           </div>
         </nav>
       </div></header>
-
-    <section class="u-clearfix u-section-1" id="sec-5160">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img class="u-expanded-width u-image u-image-1" src="{% static 'onlineshop/images/90fc53c9.svg' %}" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-1">ASYA 100 - 100 ML</h5>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
-                <img class="u-expanded-width u-image u-image-2" src="{% static 'onlineshop/images/90fc53c9.svg' %}" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-2">Пример заголовка</h5>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img class="u-expanded-width u-image u-image-3" src="{% static 'onlineshop/images/90fc53c9.svg' %}" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-3">Пример заголовка</h5>
-              </div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-4">
-                <img class="u-expanded-width u-image u-image-4" src="{% static 'onlineshop/images/90fc53c9.svg' %}" data-image-width="2000" data-image-height="1333">
-                <h5 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-default u-text-4">Пример заголовка</h5>
-              </div>
-            </div>
-          </div>
-        </div>
+    <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="sec-4011">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h2 class="u-align-center u-text u-text-default u-text-1"> {{ error_message }}</h2>
+          <a href="{% url 'onlineshop:main_page' %}"><p class="u-align-center u-text u-text-default u-text-2">Tamam</p></a>
       </div>
     </section>
     
@@ -104,7 +78,7 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d9e6"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">BILGER</p>
         <p class="u-small-text u-text u-text-variant u-text-2">Iletisim </p>
-        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/gc34476ab4f72df5338bfe340243fc055995f0934459df7878a4cb09ef2c7a18ff81c09c4b55b521ba4bfed0304db55a9_1280.png" alt="" data-image-width="1280" data-image-height="1280">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="{% static 'onlineshop/images/logo.png' %}" alt="" data-image-width="1280" data-image-height="1280">
         <p class="u-small-text u-text u-text-variant u-text-3">Numune Talebi</p>
         <p class="u-small-text u-text u-text-variant u-text-4">Calisma Saatleri</p>
         <p class="u-small-text u-text u-text-variant u-text-5">Iletisim </p>
